examples/test/testpolicy2336.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2336
  namespace: namespace270
spec:
  podSelector:
    matchLabels:
      key43: value34
      key24: value9
      key40: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value4
          key16: value47
          key47: value38
      podSelector:
        matchLabels:
          key2: value44
